# Percolate

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  package.json
audits/: PLACEHOLDER.md  README.md
cranker/: .env.example  README.md  package.json
cranker/src/: adaptive-k.ts  funding.ts  index.ts  liquidator.ts  peg-updater.ts  (+1 more)
docs/: ADAPTIVE-LIQUIDITY.md  COLLATERAL.md  CROSS-MARGIN.md  MULTICHAIN.md  PERC-ORACLE-SPEC.md  PROOF-SPEC.md  RISK-ENGINE.md
evm/: README.md  foundry.toml
examples/: create-market.ts  liquidate.ts  multichain.ts  open-position.ts
scripts/: README.md  deploy-evm.sh  deploy-solana.sh
sdk/: README.md  package.json
solana/: Anchor.toml  Cargo.toml
solana/programs/percolate/: Cargo.toml
solana/programs/percolate/src/: constants.rs  errors.rs  lib.rs
solana/programs/percolate/src/engine/: adaptive.rs  collateral_haircut.rs  funding.rs  liquidation.rs  margin.rs  mod.rs  oracle.rs  risk.rs  vamm.rs  warmup.rs
solana/programs/percolate/src/instructions/: adapt_k.rs  admin_pause.rs  admin_update_protocol.rs  cancel_trigger_order.rs  close_position.rs  crank_funding.rs  create_market.rs  deposit.rs  execute_trigger_order.rs  initialize_protocol.rs  liquidate.rs  mod.rs  open_position.rs  open_user_account.rs  place_trigger_order.rs  register_collateral.rs  settle_pnl.rs  update_amm.rs  withdraw.rs
solana/programs/percolate/src/math/: i256.rs  mod.rs  safe_math.rs  u256.rs
solana/programs/percolate/src/state/: collateral.rs  insurance_fund.rs  market.rs  mod.rs  position.rs  protocol.rs  trigger_order.rs  user_account.rs
(+30 files in other folders)
