[package]
name = "percolate"
version = "0.1.0"
description = "Multichain permissionless perpetual futures DEX built on the Percolator risk engine"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "percolate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
